// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step Component Should match the snapshot 1`] = `
<li
  className="Step__ProgressStep-sc-1lfyhjt-1 evpeND"
>
  <p
    className="Step__Title-sc-1lfyhjt-2 gyhgbg"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with icon 1`] = `
<li
  className="Step__ProgressStep-sc-1lfyhjt-1 evpeND"
>
  <p
    className="Step__Title-sc-1lfyhjt-2 gyhgbg"
  >
    Step 1
  </p>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Step__StepIcon-sc-1lfyhjt-0 jLqfgI"
    status=""
    style={
      Object {
        "color": "",
      }
    }
  >
    person
  </span>
</li>
`;

exports[`Step Component Should match the snapshot with status active 1`] = `
<li
  className="Step__ProgressStep-sc-1lfyhjt-1 kDkICH"
>
  <p
    className="Step__Title-sc-1lfyhjt-2 gyhgbg"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with status done 1`] = `
<li
  className="Step__ProgressStep-sc-1lfyhjt-1 bwpZUw"
>
  <p
    className="Step__Title-sc-1lfyhjt-2 gyhgbg"
  >
    Step 1
  </p>
  
</li>
`;
